crates/tsuno-driver/tests/fixtures/verify_cli/pass/allows_mutable_reference_to_tuple_initial_state.rs
//@ verify
fn allows_mutable_reference_to_tuple_initial_state(x: &mut (i32, bool)) {
    //@ assert "true"
}

fn main() {}
