crates/tsuno-driver/tests/fixtures/verify_cli/fail/reports_failing_assertion.rs
//@ verify
fn bad(x: i32) {
    //@ assert "x == 0"
}

fn main() {}
